# GeometricModeling

hw1/: CMakeLists.txt
hw1/src/: MathUtil.cpp  MathUtil.h  main.cpp
hw2/: CMakeLists.txt
hw2/src/: CMakeLists.txt  MathUtil.cpp  MathUtil.h  RbfNetwork.cpp  RbfNetwork.h  main.cpp  rbf_nn.py
hw3/: CMakeLists.txt  report.md
hw3/src/: CMakeLists.txt  MathUtil.cpp  MathUtil.h  main.cpp
hw4/: CMakeLists.txt
hw4/src/: CMakeLists.txt  fitcurve.cpp  fitcurve.h  main.cpp  myapp.cpp  myapp.h
hw5/: index.html
hw5/css/: index.css
hw5/js/: index.js
hw6/: CMakeLists.txt
hw6/data/: tms_coil.stl
hw6/include/pupa/pmp/: Differential.h  MinimalAreaSurface.h  SurfaceCurvature.h
hw6/include/pupa/vis/: MeshViewer.h
hw6/src/: CMakeLists.txt
hw6/src/games102_hw6/: CMakeLists.txt  main.cpp
hw6/src/pupa/: Common.cpp  MinimalAreaSurface.cpp
hw7/SourceCode/: CMakeLists.txt
hw7/examples/: CMakeLists.txt
hw7/examples/games102_hw7/: CMakeLists.txt  energy_smoothing.h  harmonic.cpp  harmonic.h  main.cpp  readme.md  tangential_smoothing.h
hw8/python/: main.py
hw8/stippling/examples/: CMakeLists.txt
hw8/stippling/examples/games102_hw8/: CMakeLists.txt  ImageSampler.cpp  ImageSampler.h  VoronoiApp.cpp  run.py
hw9/: Base.cpp  Base.hpp  CMakeLists.txt  README.md  SurfaceSimplifacation.cpp  SurfaceSimplification.h  main.cpp
